# bolt-c-rs

./: .gitignore  .ignore  Cargo.toml  README.md
crates/bolt-autodiff/: Cargo.toml
crates/bolt-autodiff/src/: backend.rs  backward.rs  device.rs  error.rs  float.rs  function.rs  grad_tape.rs  grad_tensor.rs  gradients.rs  graph.rs  handle.rs  lib.rs  operations.rs  parameter.rs  scope.rs  storage.rs  tensor.rs  tensor_ext.rs  utils.rs
crates/bolt-autodiff/src/ops/: abs.rs  add.rs  argmax.rs  argmin.rs  binary.rs  cos.rs  div.rs  exp.rs  expand.rs  log.rs  matmul.rs  max.rs  mean.rs  min.rs  mod.rs  mul.rs  neg.rs  pow.rs  prod.rs  reduce.rs  relu.rs  reshape.rs  shape.rs  sin.rs  sqrt.rs  squeeze.rs  sub.rs  sum.rs  tanh.rs  transpose.rs  unsqueeze.rs
crates/bolt-autodiff/tests/: advanced_backward.rs  advanced_grad.rs  basic_ops.rs  binary_ops_grad.rs  custom_function.rs  dtypes.rs  fluent_api.rs  grad_context.rs  grad_tape.rs  mixed_grad_tensors.rs  reduction_ops_grad.rs  view_ops.rs
crates/bolt-benchmark/: Cargo.toml
crates/bolt-benchmark/benches/: gemm_benchmark.rs  serialize_benchmark.rs
crates/bolt-cpu/: Cargo.toml
crates/bolt-cpu/src/: backend.rs  device.rs  lib.rs  runtime_ext.rs  utils.rs
crates/bolt-cpu/src/backend/: allocator.rs  context.rs  layout_utils.rs  memory_pool.rs  mod.rs  storage.rs
crates/bolt-cpu/src/backend/ops/: abs.rs  add.rs  add_scalar.rs  argmax.rs  argmin.rs  concat.rs  copy.rs  cos.rs  div.rs  div_scalar.rs  exp.rs  log.rs  matmul.rs  max.rs  mean.rs  min.rs  mod.rs  mul.rs  mul_scalar.rs  neg.rs  pow.rs  prod.rs  random.rs  reduction_helpers.rs  relu.rs  sigmoid.rs  sin.rs  sqrt.rs  sub.rs  sub_scalar.rs  sum.rs  tanh.rs  unary.rs
crates/bolt-cpu/src/kernels/: binary.rs  common.rs  copy.rs  matmul.rs  mod.rs  reduction.rs  split.rs  test_poison.rs  unary.rs
crates/bolt-cpu/tests/: allocator_tests.rs  binary_ops_tests.rs  bounds_and_alias.rs  broadcast_tests.rs  copy_deadlock_tests.rs  creation_ops.rs  diagnostics.rs  display.rs  display_tests.rs  indexing_tests.rs  lock_poisoning_tests.rs  matmul_layout_tests.rs  reduction_ops_tests.rs  scalar_ops_tests.rs  scalar_tests.rs  split_tests.rs  storage_uninit.rs  tensor_item_tests.rs  tensor_ops.rs  unary_ops_tests.rs
crates/bolt-data/: Cargo.toml
crates/bolt-data/src/: batch.rs  error.rs  lib.rs  source.rs  stream.rs  stream_ext.rs
crates/bolt-data/src/idx/: dataset.rs  header.rs  mod.rs  types.rs
crates/bolt-data/tests/: batching_tests.rs
crates/bolt-datasets/: Cargo.toml
crates/bolt-datasets/src/: error.rs  lib.rs
crates/bolt-datasets/src/mnist/: batch.rs  download.rs  mod.rs
crates/bolt-examples/: Cargo.toml
crates/bolt-examples/src/: main.rs  mnist_common.rs
crates/bolt-losses/: Cargo.toml  README.md
crates/bolt-losses/src/: error.rs  lib.rs  losses.rs  metrics.rs
crates/bolt-losses/tests/: losses.rs
crates/bolt-nn/: Cargo.toml
crates/bolt-nn/src/: compute.rs  context.rs  dual.rs  error.rs  forward_ctx.rs  init.rs  lib.rs  mode.rs  model.rs  module.rs  ops.rs  run_mode.rs  state_dict.rs  store.rs  visit.rs
crates/bolt-nn/src/layers/: activations.rs  batch_norm.rs  dropout.rs  flatten.rs  gelu.rs  global_avg_pool.rs  leaky_relu.rs  linear.rs  mod.rs  norm.rs  relu.rs  sequential.rs  sigmoid.rs  tanh.rs  utils.rs
crates/bolt-nn/tests/: affine_expansion_alignment.rs  basic.rs  batch_norm.rs  concurrent_param_creation.rs  dropout.rs  edge_cases.rs  global_avg_pool.rs  multiple_dropout.rs  param_visitor.rs  sequential.rs  state_dict.rs  training.rs
crates/bolt-optim/: Cargo.toml
crates/bolt-optim/src/: adam.rs  clip.rs  error.rs  lib.rs  sgd.rs
crates/bolt-optim/tests/: adam_tests.rs  basic.rs  grad_clipping.rs  integration_autodiff.rs  sgd_convergence.rs
crates/bolt-profiler/: Cargo.toml
crates/bolt-profiler/src/: allocator.rs  backend.rs  host_mem.rs  lib.rs  os_stats.rs  printer.rs  profiler.rs  registry.rs  report.rs  utils.rs
crates/bolt-profiler/tests/: accuracy.rs  diagnostics.rs
crates/bolt-serialize/: Cargo.toml
crates/bolt-serialize-v2/: Cargo.toml
crates/bolt-serialize-v2/src/: options.rs  reader.rs  record.rs  writer.rs
crates/bolt-serialize-v2/src/adapters/: mod.rs  rng.rs  store.rs
crates/bolt-serialize-v2/src/format/: binary.rs  safetensors.rs
crates/bolt-serialize-v2/tests/: complete_training_roundtrip.rs  data_integrity_tests.rs  edge_cases.rs  format_compatibility.rs  optimizer_roundtrip.rs  rng_roundtrip.rs  sharding_tests.rs  store_roundtrip.rs  validation_tests.rs
crates/bolt-serialize/src/: checkpoint.rs  error.rs  format.rs  io.rs  lib.rs  manifest.rs  options.rs  reader.rs  record.rs  serde_shape.rs  shard.rs  tensor.rs  tensor_set.rs  traits.rs  types.rs  utils.rs  validation.rs  writer.rs
crates/bolt-serialize/src/adapters/: mod.rs  rng.rs  store.rs  tensor.rs
crates/bolt-serialize/src/format/: binary.rs  mod.rs  safetensors.rs
crates/bolt-serialize/src/load/: checkpoint.rs  index.rs  mod.rs  shard.rs
crates/bolt-serialize/src/save/: mod.rs  plan.rs  writer.rs
crates/bolt-serialize/tests/: checkpoint_tests.rs  checksum_tests.rs  complete_training_roundtrip.rs  data_integrity_tests.rs  edge_cases.rs  format_compatibility.rs  memory_tests.rs  optim_sgd_adapter_tests.rs  optimizer_roundtrip.rs  restore_tests.rs  rng_adapter_tests.rs  rng_roundtrip.rs  shard_tests.rs  sharding_tests.rs  store_roundtrip.rs  streaming_plan_tests.rs  streaming_tests.rs  tensor_roundtrip_tests.rs  tensor_set_tests.rs  tensor_tests.rs  validation_tests.rs
crates/bolt-tensor/: Cargo.toml
crates/bolt-tensor/src/: autograd.rs  display.rs  lib.rs  tensor.rs
crates/bolt-tensor/src/autograd/: utils.rs
crates/bolt-tensor/src/autograd/ops/: abs.rs  (+31 more)
crates/bolt-tensor/src/utils/: tensor_creation.rs
crates/bolt-tensor/tests/: advanced_backward.rs  autograd_barrier_tests.rs  binary_ops_grad.rs  broadcast_binary_ops_grad.rs  concat_tests.rs  control_flow.rs  graph_ownership.rs  mixed_requires_grad.rs  one_hot_tests.rs  reduction_ops_grad.rs  runtime_recording.rs  scalar_ops_grad.rs  unary_ops_grad.rs  view_ops_grad.rs
(+49 files in other folders)
