[workspace]
members = [
    "crates/bolt-autodiff",
    "crates/bolt-core",
    "crates/bolt-cpu",
    "crates/bolt-examples",
    "crates/bolt-profiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "2"
bytemuck = "1"
num-traits = "0.2.19"
