[workspace]
members = [
    "crates/bolt-core",
    "crates/bolt-cpu",
    "crates/bolt-data",
    "crates/bolt-datasets",
    "crates/bolt-examples",
    "crates/bolt-nn",
    "crates/bolt-profiler",
    "crates/bolt-optim",
    "crates/bolt-losses",
    "crates/bolt-rng",
    "crates/bolt-tensor",
    "crates/bolt-vision",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "2"
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
seahash = "4"
bincode = "1"
