[package]
name = "bolt-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-cpu = { path = "../bolt-cpu" }
bolt-tensor = { path = "../bolt-tensor" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gemm_benchmark"
harness = false

