[package]
name = "bolt-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-cpu = { path = "../bolt-cpu" }
bolt-nn = { path = "../bolt-nn" }
bolt-rng = { path = "../bolt-rng" }
bolt-serialize = { path = "../bolt-serialize" }
bolt-tensor = { path = "../bolt-tensor" }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "gemm_benchmark"
harness = false

[[bench]]
name = "serialize_benchmark"
harness = false

