[package]
name = "bolt-cpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-rng = { path = "../bolt-rng" }
rand = "0.8"

[dev-dependencies]
bolt-tensor = { path = "../bolt-tensor" }

[features]
default = ["diagnostics"]
diagnostics = []
