[package]
name = "bolt-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Stream-based IDX data loading for bolt (v2 prototype)"

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-rng = { path = "../bolt-rng" }
thiserror.workspace = true

[dev-dependencies]
