[package]
name = "bolt-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-cpu = { path = "../bolt-cpu" }
bolt-autodiff = { path = "../bolt-autodiff" }
bolt-profiler = { path = "../bolt-profiler" }
