[package]
name = "bolt-losses"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-autodiff = { path = "../bolt-autodiff" }
thiserror.workspace = true

[dev-dependencies]
bolt-cpu = { path = "../bolt-cpu" }

