[package]
name = "bolt-nn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-tensor = { path = "../bolt-tensor" }
thiserror.workspace = true

[dev-dependencies]
bolt-cpu = { path = "../bolt-cpu" }
