[package]
name = "bolt-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-autodiff = { path = "../bolt-autodiff" }
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
bolt-cpu = { path = "../bolt-cpu" }
bolt-losses = { path = "../bolt-losses" }
