[package]
name = "bolt-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bolt-core = { path = "../bolt-core" }
bolt-nn = { path = "../bolt-nn" }
bolt-tensor = { path = "../bolt-tensor" }

[dev-dependencies]
bolt-cpu = { path = "../bolt-cpu" }
bolt-losses = { path = "../bolt-losses" }
