[package]
name = "bolt-profiler"
version = "0.1.0"
edition = "2024"
description = "Profiling utilities for the Bolt ML framework"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
bolt-core = { path = "../bolt-core" }
parking_lot = "0.12"

[features]
default = []

[dev-dependencies]
serial_test = "3"
bolt-cpu = { path = "../bolt-cpu" }
